--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,4 @@ jobs:
         run: npm run build --if-present
 
       - name: Run unit tests
-        run: npm test -- --coverage
-
-      - name: Upload coverage report
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage-${{ matrix.node-version }}
-          path: coverage 
+        run: npm test
