--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "node --loader ts-node/esm src/index.ts",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings 0",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.3",
@@ -24,7 +26,13 @@
     "@types/node": "^20.11.24",
     "@types/node-fetch": "^2.6.12",
     "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "jest": "^29.7.0",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
